--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 theme: jekyll-theme-hacker
+theme: jekyll-theme-hacker
 <!doctype html>
 <html>
   <head>
